Fixed more graph stuff

--- a/phase1_regtable.html
+++ b/phase1_regtable.html
@@ -5,6 +5,26 @@
 <tr><td>                    </td><td>        G_SC              </td></tr>
 <tr><td>                    </td><td>        b/se              </td></tr>
 <tr><td colspan=2><hr></td></tr>
+<tr><td>AVG_S11             </td><td>       1.792<sup>***</sup></td></tr>
+<tr><td>                    </td><td>     (0.015)              </td></tr>
+<tr><td>GENDER_F            </td><td>       0.548<sup>*</sup>  </td></tr>
+<tr><td>                    </td><td>     (0.264)              </td></tr>
+<tr><td>SCHOOL_NAT_PRIVATE  </td><td>      -0.572              </td></tr>
+<tr><td>                    </td><td>     (0.306)              </td></tr>
+<tr><td>SEL_2               </td><td>       0.086              </td></tr>
+<tr><td>                    </td><td>     (0.386)              </td></tr>
+<tr><td>SEL_3               </td><td>       1.031<sup>*</sup>  </td></tr>
+<tr><td>                    </td><td>     (0.508)              </td></tr>
+<tr><td>SEL_4               </td><td>       1.161<sup>**</sup> </td></tr>
+<tr><td>                    </td><td>     (0.447)              </td></tr>
+<tr><td>SEL_IHE_2           </td><td>       3.157<sup>***</sup></td></tr>
+<tr><td>                    </td><td>     (0.469)              </td></tr>
+<tr><td>SEL_IHE_3           </td><td>       6.890<sup>***</sup></td></tr>
+<tr><td>                    </td><td>     (0.679)              </td></tr>
+<tr><td>SEL_IHE_4           </td><td>       6.761<sup>***</sup></td></tr>
+<tr><td>                    </td><td>     (0.574)              </td></tr>
+<tr><td>Constant            </td><td>      46.713<sup>***</sup></td></tr>
+<tr><td>                    </td><td>     (1.007)              </td></tr>
 <tr><td>AVG_S11             </td><td>       1.783<sup>***</sup></td></tr>
 <tr><td>                    </td><td>     (0.015)              </td></tr>
 <tr><td>GENDER              </td><td>      -0.587<sup>*</sup>  </td></tr>
